# spdlog_meson_sample

./: .gitignore  README.org  main.cpp  meson.build
subprojects/: spdlog.wrap
